<?xml version="1.0"?>
<package format="2">
  <name>ytlab_ros_example</name>
  <version>0.0.0</version>
  <description>The ytlab_ros_example package</description>

  <maintainer email="y-kawasaki@keio.jp">chakio</maintainer>

  <license>TODO</license>
  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
  </export>
</package>
